tests/negative/test_type_not_id.orb
let (x:if 0);

fnc main() () {};